--- a/public/index.html
+++ b/public/index.html
@@ -1,122 +1,301 @@
 <!doctype html>
 <html lang="tr">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Ghostify — E‑posta Taraması</title>
-<style>
-:root{
-  --bg:#050b16; --panel:#0a1627; --panel2:#0d1d33;
-  --stroke:#13314d; --neon:#00e5ff; --text:#e8fbff; --muted:#9bd4e3;
-}
-*{box-sizing:border-box}
-html,body{height:100%}
-body{margin:0;background:radial-gradient(1200px 700px at 70% -10%,#07203a22,transparent),var(--bg);color:var(--text);font:15px/1.5 system-ui,Segoe UI,Roboto,Arial}
-.wrap{max-width:980px;margin:38px auto;padding:0 20px}
-.brand{display:flex;align-items:center;gap:10px;margin-bottom:18px;opacity:.9}
-.logo{width:28px;height:28px;border-radius:8px;border:1px solid var(--neon);box-shadow:0 0 18px #00e5ff55 inset,0 0 12px #00e5ff77}
-.brand b{letter-spacing:.8px}
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Ghostify — E‑posta Taraması (Demo)</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <style>
+    :root{
+      --bg:#0b1117; --panel:#0f1722; --muted:#94a3b8; --text:#e6f1ff;
+      --cyan:#00e5ff; --cyan-2:#00c7e6; --danger:#ff5577; --warn:#ffbf47; --ok:#27d07d;
+      --border:#162232; --shadow:0 10px 30px rgba(0,0,0,.35);
+      --radius:14px;
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%}
+    body{
+      margin:0; background:radial-gradient(1200px 900px at 80% -10%, rgba(0,229,255,.08), transparent 60%), var(--bg);
+      color:var(--text); font:16px/1.5 Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial;
+    }
+    .wrap{max-width:1000px; margin:40px auto; padding:0 16px;}
+    header{display:flex; align-items:center; gap:12px; margin-bottom:22px}
+    .logo{
+      width:38px; height:38px; border-radius:10px; display:grid; place-items:center;
+      color:#001018; font-weight:900; background:linear-gradient(180deg,var(--cyan),#37f2ff);
+      box-shadow:0 0 40px rgba(0,229,255,.35), inset 0 -10px 20px rgba(0,0,0,.2);
+    }
+    h1{font-size:22px; margin:0}
+    .sub{color:var(--muted); font-size:13px; margin-top:2px}
 
-.card{background:linear-gradient(180deg,var(--panel),var(--panel2));border:1px solid var(--stroke);border-radius:16px;padding:22px;box-shadow:0 20px 50px #0007}
-h1{margin:0 0 14px;font-size:24px}
-.muted{color:var(--muted);font-size:.93rem}
+    .card{
+      background:linear-gradient(180deg, rgba(255,255,255,.02), rgba(255,255,255,.00));
+      border:1px solid var(--border); border-radius:var(--radius); box-shadow:var(--shadow);
+    }
+    .panel{padding:20px}
+    .row{display:grid; gap:14px}
+    @media(min-width:860px){ .row{grid-template-columns:1.2fr .8fr} }
 
-.row{display:flex;gap:10px;align-items:center;margin:14px 0 6px}
-input[type="email"]{flex:1;min-width:260px;background:#081427;border:1px solid var(--stroke);border-radius:12px;padding:13px 14px;color:var(--text);outline:none}
-button{background:var(--neon);color:#00212a;border:0;border-radius:12px;padding:12px 16px;font-weight:700;cursor:pointer}
-button:disabled{opacity:.55;cursor:not-allowed}
+    .inputbar{
+      display:flex; gap:10px; align-items:center; background:#0c1622; border:1px solid var(--border);
+      border-radius:12px; padding:10px 10px 10px 14px; box-shadow: inset 0 0 0 1px rgba(0,229,255,.06);
+    }
+    .inputbar input{
+      flex:1; border:0; outline:0; background:transparent; color:var(--text); font-size:15px;
+    }
+    .btn{
+      appearance:none; border:1px solid #0ad; background:linear-gradient(180deg,var(--cyan),var(--cyan-2));
+      color:#001018; font-weight:700; padding:10px 16px; border-radius:12px; cursor:pointer;
+      box-shadow:0 10px 24px rgba(0,229,255,.20), inset 0 -6px 12px rgba(0,0,0,.18);
+      transition:.15s transform ease;
+    }
+    .btn:disabled{filter:grayscale(100%); opacity:.6; cursor:not-allowed}
+    .btn:active{transform:translateY(1px)}
+    .btn.secondary{
+      background:#0e1a26; color:var(--text); border:1px solid var(--border);
+      box-shadow:inset 0 0 0 1px rgba(255,255,255,.03);
+    }
 
-.grid{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;margin-top:14px}
-.kpi{background:#081427;border:1px solid var(--stroke);border-radius:14px;padding:14px}
-.kpi .v{font-size:28px;font-weight:800}
-.kpi .l{opacity:.8}
+    .kpi-grid{display:grid; grid-template-columns:repeat(3,1fr); gap:12px; margin:14px 0}
+    .kpi{
+      padding:14px; border:1px solid var(--border); border-radius:12px; background:#0c1622;
+      display:flex; align-items:center; justify-content:space-between; gap:6px;
+    }
+    .kpi .label{color:var(--muted); font-size:12px}
+    .kpi .val{font-weight:800; font-size:22px}
+    .kpi.ok .val{color:var(--ok)} .kpi.warn .val{color:var(--warn)} .kpi.danger .val{color:var(--danger)}
 
-.actions{display:flex;gap:10px;flex-wrap:wrap;margin-top:10px}
-.action{background:#081427;border:1px solid var(--stroke);color:var(--muted);padding:10px 12px;border-radius:10px;cursor:pointer}
-.action:hover{border-color:#21d4ff;color:var(--text)}
+    .actions{display:flex; flex-wrap:wrap; gap:10px; margin:10px 0 2px}
+    pre{
+      background:#0a1420; border:1px solid var(--border); border-radius:12px; padding:12px; overflow:auto;
+      max-height:420px; font-size:13px; line-height:1.45;
+    }
 
-h2{margin:18px 0 8px;font-size:18px}
-pre{background:#071224;border:1px solid var(--stroke);border-radius:14px;padding:14px;overflow:auto;color:#b9ecff}
-.footer{opacity:.65;margin-top:12px;font-size:.9rem}
-.hr{height:1px;background:linear-gradient(90deg,transparent,#143a58,transparent);margin:16px 0}
-</style>
+    .status{
+      display:flex; align-items:center; gap:10px; padding:10px 12px; border-radius:12px; border:1px solid var(--border);
+      background:#0c1622; color:var(--muted); margin-top:10px;
+    }
+    .status .dot{width:10px; height:10px; border-radius:999px; background:var(--muted); box-shadow:0 0 8px currentColor}
+    .status.ok{color:#9ef7d0} .status.ok .dot{background:var(--ok)}
+    .status.warn{color:#ffe2a6} .status.warn .dot{background:var(--warn)}
+    .status.danger{color:#ffc0cd} .status.danger .dot{background:var(--danger)}
+
+    .history{display:flex; flex-wrap:wrap; gap:8px}
+    .chip{
+      border:1px solid var(--border); background:#0c1622; color:var(--text); padding:6px 10px; border-radius:999px;
+      font-size:12px; cursor:pointer;
+    }
+
+    .toast{
+      position:fixed; right:16px; bottom:16px; padding:10px 14px; background:#0c1622; border:1px solid var(--border);
+      border-left:4px solid var(--cyan); border-radius:12px; color:var(--text); opacity:0; transform:translateY(10px);
+      transition:.2s; pointer-events:none;
+    }
+    .toast.show{opacity:1; transform:none}
+    .muted{color:var(--muted)}
+  </style>
 </head>
 <body>
   <div class="wrap">
-    <div class="brand">
-      <div class="logo"></div><b>GHOSTIFY</b><span class="muted">— Dijital İz Taraması (Demo)</span>
-    </div>
-
-    <div class="card">
-      <h1>E‑posta Taraması</h1>
-      <div class="row">
-        <input id="email" type="email" placeholder="ornek@eposta.com" autocomplete="email">
-        <button id="scanBtn">TARA</button>
+    <header>
+      <div class="logo">👻</div>
+      <div>
+        <h1>GHOSTIFY</h1>
+        <div class="sub">Dijital İz Taraması (Demo) — HIBP + LeakCheck</div>
       </div>
-      <div class="muted">Sonuçlar HIBP + LeakCheck kaynaklarından derlenir. Bu demoda yalnızca e‑posta taraması yapılır.</div>
+    </header>
 
-      <div class="grid">
-        <div class="kpi"><div class="v" id="kpiRisk">0</div><div class="l">Risk Skoru</div></div>
-        <div class="kpi"><div class="v" id="kpiHibp">0</div><div class="l">HIBP İhlali</div></div>
-        <div class="kpi"><div class="v" id="kpiLeak">0</div><div class="l">LeakCheck Kayıt</div></div>
-      </div>
+    <div class="row">
+      <!-- SOL: Ana panel -->
+      <section class="card panel">
+        <h2 style="margin:0 0 10px 0;">E‑posta Taraması</h2>
 
-      <div class="actions">
-        <div class="action" id="copyJson">JSON’u Kopyala</div>
-        <div class="action" id="downloadPdf">PDF İndir</div>
-        <div class="action muted" title="yakında">Silme Talebi Taslağı (yakında)</div>
-      </div>
+        <div class="inputbar" style="margin-bottom:12px;">
+          <input id="email" type="email" placeholder="ornek@eposta.com" autocomplete="email" />
+          <button id="scanBtn" class="btn">TARA</button>
+        </div>
 
-      <div class="hr"></div>
+        <div class="muted" style="font-size:13px">Sonuçlar HIBP ve LeakCheck kaynaklarından derlenir. Bu demoda yalnızca e‑posta taraması yapılır.</div>
 
-      <h2>Detaylar</h2>
-      <pre id="jsonOut">{ }</pre>
+        <div class="kpi-grid">
+          <div class="kpi" id="kpiRisk"><div class="label">Risk Skoru</div><div class="val">0</div></div>
+          <div class="kpi" id="kpiHibp"><div class="label">HIBP İhlali</div><div class="val">0</div></div>
+          <div class="kpi" id="kpiLeak"><div class="label">LeakCheck Kayıt</div><div class="val">0</div></div>
+        </div>
 
-      <div class="footer">© Ghostify — MVP v1.1 • <span id="stamp"></span></div>
+        <div class="actions">
+          <button id="copyBtn" class="btn secondary">JSON’u Kopyala</button>
+          <button id="pdfBtn" class="btn secondary">PDF İndir</button>
+          <button id="kvkkBtn" class="btn secondary">Silme Talebi Taslağı</button>
+        </div>
+
+        <div id="status" class="status">
+          <span class="dot"></span><span>Hazır.</span>
+        </div>
+
+        <h3 style="margin:18px 0 10px">Detaylar</h3>
+        <pre id="jsonBox">{ }</pre>
+      </section>
+
+      <!-- SAĞ: Geçmiş & İpuçları -->
+      <aside class="card panel">
+        <h3 style="margin:0 0 10px 0;">Son Taramalar</h3>
+        <div id="history" class="history muted">Henüz kayıt yok.</div>
+        <hr style="border:0;border-top:1px solid var(--border); margin:18px 0">
+        <div class="muted" style="font-size:13px">
+          <b>İpucu:</b> Rate‑limit hatası (429) alırsanız 60–90 sn bekleyip tekrar deneyin. API anahtarlarınız Vercel Environment’ta gizli tutulur.
+        </div>
+      </aside>
     </div>
   </div>
 
-<script>
-const $ = s=>document.querySelector(s);
-const btn = $('#scanBtn'), inp = $('#email'), out = $('#jsonOut');
-const kRisk=$('#kpiRisk'), kHibp=$('#kpiHibp'), kLeak=$('#kpiLeak');
-$('#stamp').textContent=new Date().toLocaleString('tr-TR');
+  <div id="toast" class="toast">Kopyalandı</div>
 
-async function scan(){
-  const email = (inp.value||'').trim();
-  if(!email || !email.includes('@')){ alert('Geçerli e‑posta girin'); inp.focus(); return; }
-  btn.disabled=true; btn.textContent='Taranıyor…'; out.textContent='';
-  try{
-    const res = await fetch('/api/scan-email',{method:'POST',headers:{'content-type':'application/json'},body:JSON.stringify({email})});
-    const data = await res.json();
+  <!-- jsPDF (PDF için) -->
+  <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js" defer></script>
 
-    const hibp  = (data.hibp && data.hibp.count) || 0;
-    const leak  = (data.leakcheck && (data.leakcheck.total ?? data.leakcheck.found)) || 0;
-    const risk  = Math.min(99, hibp*30 + leak*10);
+  <script>
+    // ============ Basit yardımcılar ============
+    const $ = sel => document.querySelector(sel);
+    const toast = (msg) => {
+      const t = $('#toast'); t.textContent = msg; t.classList.add('show');
+      setTimeout(()=>t.classList.remove('show'), 1700);
+    };
+    const saveHistory = (entry) => {
+      const key='ghostify_history';
+      const list = JSON.parse(localStorage.getItem(key) || '[]');
+      list.unshift(entry);
+      localStorage.setItem(key, JSON.stringify(list.slice(0,3))); // son 3
+      renderHistory();
+    };
+    const renderHistory = () => {
+      const key='ghostify_history';
+      const list = JSON.parse(localStorage.getItem(key) || '[]');
+      const h = $('#history');
+      if(!list.length){ h.innerHTML='Henüz kayıt yok.'; h.classList.add('muted'); return; }
+      h.classList.remove('muted');
+      h.innerHTML = list.map(item=>{
+        const d = new Date(item.scannedAt).toLocaleString('tr-TR');
+        return `<button class="chip" data-json='${JSON.stringify(item).replace(/'/g,"&#39;")}'>
+          ${item.email} · ${d}
+        </button>`;
+      }).join('');
+      h.querySelectorAll('.chip').forEach(b=>{
+        b.onclick = ()=> {
+          const data = JSON.parse(b.getAttribute('data-json'));
+          fillUI(data);
+        }
+      });
+    };
 
-    kHibp.textContent = hibp;
-    kLeak.textContent = leak;
-    kRisk.textContent = risk;
+    const setStatus = (type, text) => {
+      const s = $('#status'); s.className = 'status ' + (type || '');
+      s.innerHTML = `<span class="dot"></span><span>${text}</span>`;
+    };
 
-    out.textContent = JSON.stringify(data,null,2);
-  }catch(e){
-    out.textContent = JSON.stringify({error:e.message},null,2);
-  }finally{
-    btn.disabled=false; btn.textContent='TARA';
-  }
-}
-btn.addEventListener('click',scan);
-inp.addEventListener('keydown',e=>{ if(e.key==='Enter') scan(); });
+    const setKPIs = (hibpCount, leakTotal) => {
+      const risk = Math.min(99, hibpCount*15 + leakTotal*5);
+      const set = (id, val, cls) => { const el=$(id); el.querySelector('.val').textContent=val; el.className='kpi '+cls; };
+      set('#kpiHibp', hibpCount, hibpCount? (hibpCount>=3?'danger':'warn') : 'ok');
+      set('#kpiLeak', leakTotal, leakTotal? (leakTotal>=5?'danger':'warn') : 'ok');
+      set('#kpiRisk', risk, risk>=60?'danger': risk>=25?'warn':'ok');
+    };
 
-$('#copyJson').addEventListener('click', async ()=>{
-  await navigator.clipboard.writeText(out.textContent || '{}');
-  alert('JSON panoya kopyalandı.');
-});
+    const fillUI = (result) => {
+      const hibpCount = result?.hibp?.count || 0;
+      const leakTotal = result?.leakcheck?.total || 0;
+      setKPIs(hibpCount, leakTotal);
+      const pretty = JSON.stringify(result, null, 2);
+      $('#jsonBox').textContent = pretty;
+      if(hibpCount===0 && leakTotal===0){
+        setStatus('ok','Her şey temiz görünüyor. Yine de güçlü şifre ve 2FA önerilir.');
+      } else if (hibpCount+leakTotal < 3){
+        setStatus('warn','Bazı kayıtlar bulundu. Hesap güvenliğini gözden geçirin.');
+      } else {
+        setStatus('danger','Yüksek risk: birden fazla sızıntı tespit edildi. Şifreleri değiştirin.');
+      }
+    };
 
-$('#downloadPdf').addEventListener('click', ()=>{
-  // Basit “print to PDF” akışı; tarayıcıdan PDF’e yazdırılır.
-  window.print();
-});
-</script>
+    // ============ Tarama ============
+    const scanBtn = $('#scanBtn');
+    const emailInput = $('#email');
+
+    let busy=false; let lastClick=0;
+    scanBtn.onclick = async () => {
+      const now=Date.now(); if(now-lastClick<1200) return; lastClick=now; // basit throttle
+      const email = (emailInput.value||'').trim().toLowerCase();
+      if(!email || !/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(email)){ toast('Geçerli bir e‑posta girin'); emailInput.focus(); return; }
+
+      if(busy) return; busy=true;
+      scanBtn.disabled = true; setStatus('', 'Taranıyor…');
+      try{
+        const res = await fetch('/api/scan-email', {
+          method:'POST',
+          headers:{'content-type':'application/json'},
+          body: JSON.stringify({ email })
+        });
+        if(!res.ok){
+          if(res.status===401||res.status===403) throw new Error('API yetkilendirme hatası (env anahtarlarını doğrulayın).');
+          if(res.status===429) throw new Error('Sık istek (429). Lütfen 1‑2 dk sonra tekrar deneyin.');
+          throw new Error('Sunucu hatası ('+res.status+').');
+        }
+        const data = await res.json();
+        const result = {
+          email,
+          hibp: { count: Array.isArray(data?.hibp)? data.hibp.length : (data?.hibp?.count||0), breaches: data?.hibp || [] },
+          leakcheck: { total: data?.leakcheck?.total || 0 },
+          scannedAt: new Date().toISOString()
+        };
+        fillUI(result);
+        saveHistory(result);
+      }catch(err){
+        setStatus('danger', err.message || 'Bir hata oluştu.');
+        console.error(err);
+      }finally{
+        scanBtn.disabled = false; busy=false;
+      }
+    };
+
+    // ============ JSON kopyala & PDF ============
+    $('#copyBtn').onclick = async () => {
+      try{
+        await navigator.clipboard.writeText($('#jsonBox').textContent || '{}');
+        toast('JSON kopyalandı');
+      }catch(e){ toast('Kopyalanamadı'); }
+    };
+
+    $('#pdfBtn').onclick = async () => {
+      const { jsPDF } = window.jspdf || {};
+      if(!jsPDF){ toast('PDF kütüphanesi yüklenemedi'); return; }
+      const doc = new jsPDF({unit:'pt', format:'a4'});
+      const p = 36;
+      const title = 'Ghostify — E‑posta Tarama Raporu';
+      doc.setFillColor(0,229,255); doc.rect(0,0,595,6,'F');
+      doc.setFont('helvetica','bold'); doc.setFontSize(16);
+      doc.text(title, p, 40);
+      doc.setFont('helvetica','normal'); doc.setFontSize(11);
+      doc.text(`Tarih: ${new Date().toLocaleString('tr-TR')}`, p, 60);
+      const txt = $('#jsonBox').textContent || '{}';
+      doc.setFont('courier','normal'); doc.setFontSize(9);
+      doc.text(txt, p, 90, {maxWidth: 595-p*2});
+      doc.save(`ghostify-rapor-${Date.now()}.pdf`);
+    };
+
+    // ============ KVKK taslak ============
+    $('#kvkkBtn').onclick = () => {
+      const email = (emailInput.value||'').trim().toLowerCase();
+      const body =
+`Konu: Kişisel Verilerin Silinmesi Talebi (KVKK m.11)
+İlgili Birim,
+Tarafıma ait (${email||'—'}) kişisel verilerin, işleme amacı ortadan kalktığından sistemlerinizden silinmesini/anonim hale getirilmesini talep ederim.
+Kimlik doğrulaması ve sürecin ilerleyişi için geri dönüşünüzü rica ederim.
+Saygılarımla.`;
+      navigator.clipboard.writeText(body).then(()=>toast('Taslak kopyalandı'));
+    };
+
+    // İlk yükleme
+    renderHistory();
+  </script>
 </body>
 </html>
