--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Ghostify — E‑posta Taraması (Demo)</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="/styles.css">
   <!-- PDF indirme için küçük bir kütüphane -->
   <script src="https://cdn.jsdelivr.net/npm/jspdf@2.5.1/dist/jspdf.umd.min.js" defer></script>
-  <script src="app.js" defer></script>
+  <script src="/app.js" defer></script>
 </head>
 <body>
   <header class="topbar">
