--- a/index.html
+++ b/index.html
@@ -1,36 +1,74 @@
-<!DOCTYPE html>
-<html lang="tr">
+<!doctype html><html lang="tr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ghostify - Davet Kodu</title>
-  <link rel="stylesheet" href="style.css" />
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Ghostify – Davet</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Matrix Arka Plan -->
-  <canvas id="matrix"></canvas>
-
-  <!-- Ana Container -->
-  <div class="container">
-    <div class="logo-container">
-      <img src="assets/icon.png" alt="Ghostify Logo" class="logo" />
-      <h1 class="neon-text">GHOSTIFY</h1>
-      <p class="subtitle">GHOSTIFY CORE LOADING</p>
-      <div class="icons">🔒 🧠 ⚙️ 🕵️‍♂️</div>
-    </div>
-
-    <h2 class="title">DAVET KODUNUZU GİRİN</h2>
-
-    <form>
-      <input type="text" placeholder="DAVET KODUNUZU YAZIN" />
-      <button type="submit">DEVAM ET</button>
-    </form>
-
-    <p class="footer">
-      DAVET KODUNUZ YOK MU? <a href="#">KOD TALEP ET</a>
-    </p>
+<canvas id="matrixCanvas"></canvas>
+<div class="wrapper">
+  <div class="brand">
+    <img src="assets/logo.png" alt="Ghostify">
+    <div class="wordmark">GHOSTIFY</div>
+    <div class="sub">GHOSTIFY CORE LOADING</div>
   </div>
 
-  <script src="matrix.js"></script>
-</body>
-</html>
+  <h2 class="invite-title">DAVET KODUNUZU GİRİN</h2>
+  <input class="input" placeholder="DAVET KODUNUZU YAZIN">
+  <button class="btn">DEVAM ET</button>
+
+  <p class="muted">DAVET KODUNUZ YOK MU? <a class="link" href="support.html">KOD TALEP ET</a></p>
+</div>
+<script src="matrix.js"></script><script src="app.js"></script>
+</body></html>
+// matrix.js — yumuşak, dikkat dağıtmayan sürüm
+const canvas = document.getElementById('matrixCanvas');
+const ctx = canvas.getContext('2d');
+
+function size() {
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+}
+size(); window.addEventListener('resize', size);
+
+const symbols = '01';
+const fontSize = 16;
+let columns = Math.floor(window.innerWidth / fontSize);
+let drops = Array(columns).fill(1);
+
+function draw() {
+  ctx.fillStyle = 'rgba(0,0,0,0.05)';              // hafif iz bırak
+  ctx.fillRect(0,0,canvas.width,canvas.height);
+
+  ctx.fillStyle = '#00ffff';
+  ctx.font = `${fontSize}px monospace`;
+
+  for(let i=0;i<drops.length;i++){
+    const text = symbols.charAt(Math.floor(Math.random()*symbols.length));
+    const x = i*fontSize;
+    const y = drops[i]*fontSize;
+
+    ctx.globalAlpha = 0.25 + Math.random()*0.25;   // yumuşak parıltı
+    ctx.fillText(text,x,y);
+
+    if(y > canvas.height && Math.random() > 0.975){ drops[i] = 0; }
+    drops[i]++;
+  }
+  ctx.globalAlpha = 1;
+  requestAnimationFrame(draw);
+}
+requestAnimationFrame(draw);
+// app.js — sayfa fade ve harici link koruması
+window.addEventListener('load', () => {
+  document.body.classList.add('loaded');
+  // Sayfa geçişleri
+  document.querySelectorAll('a[href]').forEach(a=>{
+    const href=a.getAttribute('href');
+    if(!href || href.startsWith('#') || href.startsWith('http')) return;
+    a.addEventListener('click', e=>{
+      e.preventDefault();
+      document.body.classList.remove('loaded');
+      setTimeout(()=>{ window.location.href = href; }, 250);
+    });
+  });
+});
