--- a/scan.html
+++ b/scan.html
@@ -1,71 +1,72 @@
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ghostify - Tarama</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&family=Inter:wght@400;500&display=swap" rel="stylesheet">
-</head>
-<body>
-  <canvas id="matrixCanvas"></canvas>
+<!doctype html><html lang="tr"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Ghostify – Tarama</title><link rel="stylesheet" href="style.css"></head><body>
+<canvas id="matrixCanvas"></canvas>
+<div class="wrapper">
+  <div class="brand"><img src="assets/icon.png"><div class="wordmark">GHOSTIFY</div></div>
+  <div class="sub">TARAMA DEVAM EDİYOR…</div>
+  <div class="circle" id="pcent">47%</div>
+  <div class="cards">
+    <div class="card"><div class="sub">TOPLAM HESAP</div><h2>42</h2></div>
+    <div class="card"><div class="sub">ANALİZ EDİLEN</div><h2>31</h2></div>
+    <div class="card"><div class="sub">RİSKLİ</div><h2>5</h2></div>
+  </div>
+  <div style="margin-top:20px">
+    <button class="btn btn--ghost" onclick="location.href='dashboard.html'">TARAMAYI DURDUR</button>
+    <button class="btn" onclick="location.href='report.html'">SONUÇLARI GÖRÜNTÜLE</button>
+  </div>
+</div>
+<script src="matrix.js"></script><script src="app.js"></script>
+  // matrix.js — yumuşak, dikkat dağıtmayan sürüm
+const canvas = document.getElementById('matrixCanvas');
+const ctx = canvas.getContext('2d');
 
-  <!-- Üst Menü -->
-  <header class="dash-header">
-    <div class="logo-left">
-      <img src="assets/icon.png" alt="Ghostify" class="dash-logo">
-      <h1 class="dash-title">TARAMA MERKEZİ</h1>
-    </div>
-    <div class="user-info">
-      <span>👤 Emre</span>
-    </div>
-  </header>
+function size() {
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+}
+size(); window.addEventListener('resize', size);
 
-  <!-- Tarama İçerik -->
-  <main class="scan-section">
-    <h2 class="scan-title">TARAMA DEVAM EDİYOR...</h2>
-    <div class="progress-ring">
-      <div class="progress-circle">
-        <span class="progress-text">47%</span>
-      </div>
-    </div>
+const symbols = '01';
+const fontSize = 16;
+let columns = Math.floor(window.innerWidth / fontSize);
+let drops = Array(columns).fill(1);
 
-    <div class="scan-stats">
-      <div class="scan-card">
-        <h3>42</h3>
-        <p>Toplam Hesap</p>
-      </div>
-      <div class="scan-card">
-        <h3>31</h3>
-        <p>Analiz Edilen</p>
-      </div>
-      <div class="scan-card">
-        <h3>5</h3>
-        <p>Riskli Bulunan</p>
-      </div>
-    </div>
+function draw() {
+  ctx.fillStyle = 'rgba(0,0,0,0.05)';              // hafif iz bırak
+  ctx.fillRect(0,0,canvas.width,canvas.height);
 
-    <div class="scan-buttons">
-      <button class="button stop">TARAMAYI DURDUR</button>
-      <button class="button view" onclick="window.location='report.html'">SONUÇLARI GÖRÜNTÜLE</button>
-    </div>
-  </main>
+  ctx.fillStyle = '#00ffff';
+  ctx.font = `${fontSize}px monospace`;
 
-  <script src="matrix.js"></script>
-  <script>
-  document.addEventListener("DOMContentLoaded", () => {
-    document.body.classList.add("loaded");
-    document.querySelectorAll("a,button[onclick]").forEach(link => {
-      link.addEventListener("click", e => {
-        const href = link.getAttribute('onclick')?.match(/'(.*?)'/)?.[1] || link.getAttribute('href');
-        if (href && !href.startsWith('#')) {
-          e.preventDefault();
-          document.body.classList.add("fade-out");
-          setTimeout(()=> window.location.href = href, 400);
-        }
-      });
+  for(let i=0;i<drops.length;i++){
+    const text = symbols.charAt(Math.floor(Math.random()*symbols.length));
+    const x = i*fontSize;
+    const y = drops[i]*fontSize;
+
+    ctx.globalAlpha = 0.25 + Math.random()*0.25;   // yumuşak parıltı
+    ctx.fillText(text,x,y);
+
+    if(y > canvas.height && Math.random() > 0.975){ drops[i] = 0; }
+    drops[i]++;
+  }
+  ctx.globalAlpha = 1;
+  requestAnimationFrame(draw);
+}
+requestAnimationFrame(draw);
+// app.js — sayfa fade ve harici link koruması
+window.addEventListener('load', () => {
+  document.body.classList.add('loaded');
+  // Sayfa geçişleri
+  document.querySelectorAll('a[href]').forEach(a=>{
+    const href=a.getAttribute('href');
+    if(!href || href.startsWith('#') || href.startsWith('http')) return;
+    a.addEventListener('click', e=>{
+      e.preventDefault();
+      document.body.classList.remove('loaded');
+      setTimeout(()=>{ window.location.href = href; }, 250);
     });
   });
-  </script>
-</body>
-</html>
+});
+
+</body></html>
