--- a/report.html
+++ b/report.html
@@ -1,76 +1,73 @@
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ghostify - Rapor</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&family=Inter:wght@400;500&display=swap" rel="stylesheet">
-</head>
-<body>
-  <canvas id="matrixCanvas"></canvas>
+<!doctype html><html lang="tr"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Ghostify – Rapor</title><link rel="stylesheet" href="style.css"></head><body>
+<canvas id="matrixCanvas"></canvas>
+<div class="wrapper">
+  <div class="brand"><img src="assets/icon.png"><div class="wordmark">GHOSTIFY</div></div>
+  <div class="sub">RAPOR HAZIR • 18 EKİM 2025 – 02:47</div>
+  <div class="circle">72</div>
+  <table class="table">
+    <tr><th>PLATFORM</th><th>DURUM</th><th>İHLAL TARİHİ</th></tr>
+    <tr><td>Instagram</td><td>Tespit edildi</td><td>2023-10-04</td></tr>
+    <tr><td>Twitter</td><td>Güvende</td><td>—</td></tr>
+    <tr><td>LinkedIn</td><td>Yüksek Risk</td><td>—</td></tr>
+  </table>
+  <div style="margin-top:10px">
+    <button class="btn btn--ghost" onclick="location.href='dashboard.html'">YENİ TARAMA BAŞLAT</button>
+    <button class="btn">PDF RAPORU İNDİR</button>
+  </div>
+</div>
+<script src="matrix.js"></script><script src="app.js"></script>
+  // matrix.js — yumuşak, dikkat dağıtmayan sürüm
+const canvas = document.getElementById('matrixCanvas');
+const ctx = canvas.getContext('2d');
 
-  <!-- Üst Menü -->
-  <header class="dash-header">
-    <div class="logo-left">
-      <img src="assets/icon.png" alt="Ghostify" class="dash-logo">
-      <h1 class="dash-title">RAPOR SONUÇLARI</h1>
-    </div>
-    <div class="user-info">
-      <span>👤 Emre</span>
-    </div>
-  </header>
+function size() {
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+}
+size(); window.addEventListener('resize', size);
 
-  <!-- Rapor İçeriği -->
-  <main class="report-section">
-    <h2 class="report-title">DİJİTAL RİSK SKORUN</h2>
-    <div class="score-circle">
-      <div class="score-inner">
-        <span class="score-value">72</span>
-      </div>
-      <p class="score-label">Orta Düzey Risk</p>
-    </div>
+const symbols = '01';
+const fontSize = 16;
+let columns = Math.floor(window.innerWidth / fontSize);
+let drops = Array(columns).fill(1);
 
-    <div class="report-grid">
-      <div class="report-table">
-        <h3>PLATFORM DURUMLARI</h3>
-        <table>
-          <tr><th>Platform</th><th>Durum</th></tr>
-          <tr><td>Instagram</td><td class="ok">Güvenli</td></tr>
-          <tr><td>Twitter</td><td class="warn">Orta Risk</td></tr>
-          <tr><td>LinkedIn</td><td class="high">Yüksek Risk</td></tr>
-        </table>
-      </div>
+function draw() {
+  ctx.fillStyle = 'rgba(0,0,0,0.05)';              // hafif iz bırak
+  ctx.fillRect(0,0,canvas.width,canvas.height);
 
-      <div class="report-tips">
-        <h3>GÜVENLİK ÖNERİLERİ</h3>
-        <ul>
-          <li>Şifrenizi 3 ayda bir yenileyin.</li>
-          <li>2FA (İki adımlı doğrulama) aktif edin.</li>
-          <li>Kullanmadığınız hesapları kapatın.</li>
-        </ul>
+  ctx.fillStyle = '#00ffff';
+  ctx.font = `${fontSize}px monospace`;
 
-        <button class="button view" onclick="window.location='delete.html'">SİLME TALEBİ OLUŞTUR</button>
-        <button class="button download">PDF RAPORU İNDİR</button>
-      </div>
-    </div>
-  </main>
+  for(let i=0;i<drops.length;i++){
+    const text = symbols.charAt(Math.floor(Math.random()*symbols.length));
+    const x = i*fontSize;
+    const y = drops[i]*fontSize;
 
-  <script src="matrix.js"></script>
-  <script>
-  document.addEventListener("DOMContentLoaded", () => {
-    document.body.classList.add("loaded");
-    document.querySelectorAll("a,button[onclick]").forEach(link => {
-      link.addEventListener("click", e => {
-        const href = link.getAttribute('onclick')?.match(/'(.*?)'/)?.[1] || link.getAttribute('href');
-        if (href && !href.startsWith('#')) {
-          e.preventDefault();
-          document.body.classList.add("fade-out");
-          setTimeout(()=> window.location.href = href, 400);
-        }
-      });
+    ctx.globalAlpha = 0.25 + Math.random()*0.25;   // yumuşak parıltı
+    ctx.fillText(text,x,y);
+
+    if(y > canvas.height && Math.random() > 0.975){ drops[i] = 0; }
+    drops[i]++;
+  }
+  ctx.globalAlpha = 1;
+  requestAnimationFrame(draw);
+}
+requestAnimationFrame(draw);
+// app.js — sayfa fade ve harici link koruması
+window.addEventListener('load', () => {
+  document.body.classList.add('loaded');
+  // Sayfa geçişleri
+  document.querySelectorAll('a[href]').forEach(a=>{
+    const href=a.getAttribute('href');
+    if(!href || href.startsWith('#') || href.startsWith('http')) return;
+    a.addEventListener('click', e=>{
+      e.preventDefault();
+      document.body.classList.remove('loaded');
+      setTimeout(()=>{ window.location.href = href; }, 250);
     });
   });
-  </script>
-</body>
-</html>
+});
+
+</body></html>
