--- a/delete.html
+++ b/delete.html
@@ -1,64 +1,76 @@
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ghostify - Silme Talebi</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&family=Inter:wght@400;500&display=swap" rel="stylesheet">
-</head>
-<body>
-  <canvas id="matrixCanvas"></canvas>
+<!doctype html><html lang="tr"><head>
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Ghostify – Silme Talebi</title><link rel="stylesheet" href="style.css"></head><body>
+<canvas id="matrixCanvas"></canvas>
+<div class="wrapper">
+  <div class="brand"><img src="assets/logo.png"><div class="wordmark">GHOSTIFY</div></div>
+  <h2>SİLİNECEK HESAPLARI SEÇİN</h2>
+  <div class="options">
+    <label><input type="checkbox"><span class="option">Instagram</span></label>
+    <label><input type="checkbox"><span class="option">Twitter</span></label>
+    <label><input type="checkbox"><span class="option">LinkedIn</span></label>
+    <label><input type="checkbox"><span class="option">Spotify</span></label>
+  </div>
+  <h2>KULLANICI BİLGİLERİ</h2>
+  <input class="input" placeholder="AD SOYAD">
+  <input class="input" placeholder="E-POSTA ADRESİ">
+  <label style="display:flex;gap:8px;align-items:center;justify-content:center;margin:10px 0">
+    <input type="checkbox"><span class="sub">Bu hesapların silinmesini onaylıyorum.</span>
+  </label>
+  <button class="btn btn--ghost" onclick="location.href='dashboard.html'">GERİ DÖN</button>
+  <button class="btn">SİLME TALEBİ OLUŞTUR</button>
+</div>
+<script src="matrix.js"></script><script src="app.js"></script>
+  // matrix.js — yumuşak, dikkat dağıtmayan sürüm
+const canvas = document.getElementById('matrixCanvas');
+const ctx = canvas.getContext('2d');
 
-  <!-- Üst Menü -->
-  <header class="dash-header">
-    <div class="logo-left">
-      <img src="assets/icon.png" alt="Ghostify" class="dash-logo">
-      <h1 class="dash-title">VERİ SİLME MERKEZİ</h1>
-    </div>
-    <div class="user-info">
-      <span>👤 Emre</span>
-    </div>
-  </header>
+function size() {
+  canvas.width = window.innerWidth;
+  canvas.height = window.innerHeight;
+}
+size(); window.addEventListener('resize', size);
 
-  <!-- Silme Formu -->
-  <main class="delete-section">
-    <h2 class="delete-title">HESAPLARINIZI SEÇİN</h2>
+const symbols = '01';
+const fontSize = 16;
+let columns = Math.floor(window.innerWidth / fontSize);
+let drops = Array(columns).fill(1);
 
-    <div class="account-list">
-      <button class="account-btn">Instagram</button>
-      <button class="account-btn">Twitter</button>
-      <button class="account-btn">LinkedIn</button>
-      <button class="account-btn">Spotify</button>
-      <button class="account-btn">Reddit</button>
-    </div>
+function draw() {
+  ctx.fillStyle = 'rgba(0,0,0,0.05)';              // hafif iz bırak
+  ctx.fillRect(0,0,canvas.width,canvas.height);
 
-    <div class="delete-form">
-      <input type="text" class="auth-input" placeholder="AD SOYAD">
-      <input type="email" class="auth-input" placeholder="E-POSTA ADRESİNİZİ YAZIN">
-      <label class="checkbox-line">
-        <input type="checkbox" required>
-        <span>Bu hesapların silinmesini onaylıyorum.</span>
-      </label>
-      <button class="button delete-action" onclick="window.location='settings.html'">SİLME TALEBİ OLUŞTUR</button>
-    </div>
-  </main>
+  ctx.fillStyle = '#00ffff';
+  ctx.font = `${fontSize}px monospace`;
 
-  <script src="matrix.js"></script>
-  <script>
-  document.addEventListener("DOMContentLoaded", () => {
-    document.body.classList.add("loaded");
-    document.querySelectorAll("a,button[onclick]").forEach(link => {
-      link.addEventListener("click", e => {
-        const href = link.getAttribute('onclick')?.match(/'(.*?)'/)?.[1] || link.getAttribute('href');
-        if (href && !href.startsWith('#')) {
-          e.preventDefault();
-          document.body.classList.add("fade-out");
-          setTimeout(()=> window.location.href = href, 400);
-        }
-      });
+  for(let i=0;i<drops.length;i++){
+    const text = symbols.charAt(Math.floor(Math.random()*symbols.length));
+    const x = i*fontSize;
+    const y = drops[i]*fontSize;
+
+    ctx.globalAlpha = 0.25 + Math.random()*0.25;   // yumuşak parıltı
+    ctx.fillText(text,x,y);
+
+    if(y > canvas.height && Math.random() > 0.975){ drops[i] = 0; }
+    drops[i]++;
+  }
+  ctx.globalAlpha = 1;
+  requestAnimationFrame(draw);
+}
+requestAnimationFrame(draw);
+// app.js — sayfa fade ve harici link koruması
+window.addEventListener('load', () => {
+  document.body.classList.add('loaded');
+  // Sayfa geçişleri
+  document.querySelectorAll('a[href]').forEach(a=>{
+    const href=a.getAttribute('href');
+    if(!href || href.startsWith('#') || href.startsWith('http')) return;
+    a.addEventListener('click', e=>{
+      e.preventDefault();
+      document.body.classList.remove('loaded');
+      setTimeout(()=>{ window.location.href = href; }, 250);
     });
   });
-  </script>
-</body>
-</html>
+});
+
+</body></html>
